test/fail/basic_syntax/invalid_parameter_type.lly
#[
SyntaxError: Class 'asdf' does not exist.
    from invalid_parameter_type.lly:6:
]#

define f(g: asdf) {
}
